src/objects/Escalator__c.object
<CustomObject>
    <fields>
        <fullName>APF_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>APF Mapping</label>
        <referenceTo>Price_File_Mapping__c</referenceTo>
        <relationshipLabel>Escalators</relationshipLabel>
        <relationshipName>Escalators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Escalators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Markup_10__c</fullName>
        <label>Markup 10</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Markup_11__c</fullName>
        <label>Markup 11</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Markup_1__c</fullName>
        <label>Markup 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_Amount_10__c</fullName>
        <label>Max Amount 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Amount_1__c</fullName>
        <label>Max Amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Amount_2__c</fullName>
        <label>Max Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MSRP</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Is_Vendor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Escalators</relationshipLabel>
        <relationshipName>Escalators</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Escalator</label>
    <nameField>
        <displayFormat>ESC-{00000000}</displayFormat>
        <label>Escalator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Escalators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>